test/language/spec/ownership/valid/owned_param.topo
// Owned parameter in function declaration

std::import("particle.h", Particle);

namespace physics {
  public:
    void update(owned Particle p);
}
